# NineThousand

./: CMakeLists.txt  README.md
resources/animations/: DEAGLE.fbx  GlockIdle2.fbx  untitled.fbx
resources/levels/: poolrooms.json  test.json
resources/models/: AKS74U_Pickup.mtl  Bullet_Case_9mm.mtl  Bullet_Case_Rifle.mtl  Hanging_Light.mtl  Mannequin.fbx  PoolLadder.mtl  Stalker.fbx  glockr.fbx
resources/models/table/: scene.gltf
resources/shaders/: animated.frag  animated.fs  animated.vert  animated.vs  blood_splatter.frag  blood_splatter.vert  bloom.frag  blur.frag  blur_horizontal.frag  blur_vertical.frag  csm_depth.frag  csm_depth.geom  csm_depth.vert  deferred_lighting.frag  deferred_lighting.vert  equirectangularMap.frag  equirectangularMap.vert  floor_plane.fs  fxaa.frag  fxaa.vert  g_buffer.frag  g_buffer.vert  ground.frag  ground.vert  hdr_skybox.frag  instanced.vert  irradiance_convolution.frag  lamp.frag  lamp.vert  lamp.vs  lighting.frag  lighting.vert  mirror.fs  mirror.vs  muzzle_flash.frag  muzzle_flash.vert  outline_animated.frag  outline_animated.vert  pbr.frag  pbr.vert  (+27 more)
resources/shaders/common/: lights.glsl  pbr_core.glsl
src/: main.cpp
src/API/OpenGL/: Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer.hpp  GL_Utils.cpp  GL_Utils.h  GL_renderer.cpp  GL_renderer.h  Mesh.cpp  Mesh.h  Mesh2D.hpp  Primitives.hpp  Renderer.cpp  Renderer.h  SSBO.hpp  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  UBO.hpp
src/API/OpenGL/RenderPasses/: GBuffer_Pass.cpp  Shadow_Pass.cpp
src/API/OpenGL/Renderer/: Animation_Pass.cpp  Billboard_pass.cpp  BloodSplatter_pass.cpp  Bloom_pass.cpp  Debug_pass.cpp  Emissive_pass.cpp  GBuffer_Pass.cpp  Lighting_Pass.cpp  PickUp_pass.cpp  Postprocessing_pass.cpp  Renderer.cpp  Renderer.h  Shadow_Pass.cpp  UI_pass.cpp  Water_Pass.cpp
src/Animation/: Animation.hpp  Animator.hpp
src/Animations/: Animation.hpp  AnimationManager.hpp  Animator.hpp  AssimpGlmHelpers.hpp  Bone.hpp
src/Audio/: AudioManager.cpp  AudioManager.h
src/Camera/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Frustum.cpp  Frustum.h
src/Common/: AABB.cpp  AABB.h  CreateInfo.hpp  Enums.hpp  RendererCommon.h  Types.hpp
src/Core/: AssetManager.cpp  AssetManager.h  CreateInfo.hpp  Engine.cpp  Engine.h  Model.cpp  Model.h  Window.cpp  Window.h
src/Editor/: Editor.cpp  Editor.h  EditorPanel.cpp  EditorPanel.h
src/Game/: Game.cpp  Game.h  Light.cpp  Light.h  Mannequin.cpp  Mannequin.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Stalker.cpp  Stalker.h  WeaponManager.cpp  WeaponManager.h
src/Graphics/: Cubemap.cpp  Cubemap.h  GL_renderer.cpp  GL_renderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.hpp  Shader.cpp  Shader.h  Texture.cpp
src/Input/: Camera.cpp  Camera.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Objects/: BloodSplatterObject.cpp  BloodSplatterObject.h  BulletCaseObject.cpp  BulletCaseObject.h  GameObject.cpp  GameObject.h  LightObject.cpp  LightObject.h  PickUpObject.cpp  PickUpObject.h  WaterObject.cpp  WaterObject.h  WaterPlaneObject.cpp  WaterPlaneObject.h
src/PathFinding/: PathFinding.cpp  PathFinding.h  SearchCell.h
src/Physics/: CharacterController.cpp  CharacterController.h  Physics.cpp  Physics.h  Ragdoll.cpp  Ragdoll.h  RigidDynamic.cpp  RigidDynamic.h  RigidStatic.cpp  RigidStatic.h
src/Renderer/: Shader.h
src/UI/: EditorUI.cpp  EditorUI.h  Text2D.cpp  Text2D.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UITextureElement.cpp  UITextureElement.h
src/Utils/: JSON.cpp  JSON.h  Utils.cpp  Utils.h
